tests/integration/text_document/snapshots/integration__text_document__completion__user_environment.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 847
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\foobar\n%SRC \\fooba\n%SRC \\begin{foo}\n%SRC \\end{foo}\n%SRC \\begin{fo}\n%CUR         ^\n%1.1        ^^\n\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "user-defined",
    "kind": 1,
    "label": "foo",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "filecontents",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "filecontents"
    }
  }
]
